Updates for v3.